testapp/flaskapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: flaskapp
    labels:
        app: flaskapp
spec:
    containers:
        - name: flaskapp
          image: venkyg/flaskapp:latest
          ports:
            - containerPort: 8080
              name: flaskapp
