testapp/flaskapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: flaskapp
