testapp/flaskapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapp-ingress
spec:
  backend:
    serviceName: flaskapp-service
    servicePort: 8080
